0ctf2024/kubevirt/compile-readflag.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-readflag
  labels:
    app: build-readflag
spec:
  selector:
    matchLabels:
      app: build-readflag
  template:
    metadata:
      labels:
        app: build-readflag
    spec:
      hostNetwork: false
      restartPolicy: Always
      containers:
      - name: sleep
        image: muslcc/x86_64:x86_64-linux-musl
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
        volumeMounts:
        - name: host-root
          mountPath: /host
          readOnly: false
        lifecycle:
          preStop:
            exec:
              command: ["rm", "-f", "/host/readflag"]
      volumes:
      - name: host-root
        hostPath:
          path: /etc
          type: Directory
      terminationGracePeriodSeconds: 30
